# linux-touchpad

./: .flake8  .gitignore  Pipfile  README.md  README.org  install.py  pyproject.toml
linux-touchpad/: __main__.py  device.py  lock.py  main.py  process.py  touchpad.py  watchdog.py
src/: .mouse  __main__.py  touchpad.py
tests/: conftest.py  test_watchdog.py
