[tool.poetry]
name = "linux-touchpad"
version = "0.1.0"
description = ""
authors = ["Noah <noah@coronasoftware.net>"]

[tool.poetry.dependencies]
python = "^3.7"
xlib = "^0.21.0"
aiofiles = "^0.4.0"
uvloop = "^0.12.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
